--- a/templates/index.html
+++ b/templates/index.html
@@ -113,14 +113,14 @@
     <!-- Contenido del header -->
     <div class="chat-info">
       <h2>Dante Propiedades</h2>
-      <div class="chat-subtitle">Asistente Inmobiliario</div>
+      <div class="chat-subtitle">Recorrido virtual 360</div>
       <div class="status-indicator">
         <div class="status-dot"></div>
         <span id="statusText">Conectado</span>
       </div>
     </div>
 
-    <button class="reset-chat" onclick="resetearChat()">Nueva Consulta</button>
+     <!--<button class="reset-chat" onclick="resetearChat()">Nueva Consulta</button>-->
   </div>
 </div>
 
