--- a/templates/index.html
+++ b/templates/index.html
@@ -114,10 +114,10 @@
     <div class="chat-info">
       <h2>Dante Propiedades</h2>
       <div class="chat-subtitle">Recorrido virtual 360</div>
-      <div class="status-indicator">
+      <!--<div class="status-indicator">
         <div class="status-dot"></div>
         <span id="statusText">Conectado</span>
-      </div>
+      </div>-->
     </div>
 
      <!--<button class="reset-chat" onclick="resetearChat()">Nueva Consulta</button>-->
@@ -138,11 +138,11 @@
       },
       "cocina": {
         "type": "equirectangular",
-        "panorama": "/static/cocina.png"
+        "panorama": "/static/UF004-05.png"
       },
       "jardin": {
         "type": "equirectangular",
-        "panorama": "/static/jardin.png"
+        "panorama": "/static/jUF004-7.png"
       }
     }
   });
