--- a/templates/index.html
+++ b/templates/index.html
@@ -142,7 +142,7 @@
       },
       "jardin": {
         "type": "equirectangular",
-        "panorama": "/static/jUF004-7.png"
+        "panorama": "/static/UF004-7.png"
       }
     }
   });
