--- a/templates/index.html
+++ b/templates/index.html
@@ -138,11 +138,11 @@
       },
       "cocina": {
         "type": "equirectangular",
-        "panorama": "/static/UF004-5.png"
+        "panorama": "/static/UF004-5.jpg"
       },
       "jardin": {
         "type": "equirectangular",
-        "panorama": "/static/UF004-7.png"
+        "panorama": "/static/UF004-7.jpg"
       }
     }
   });
