--- a/templates/index.html
+++ b/templates/index.html
@@ -138,7 +138,7 @@
       },
       "cocina": {
         "type": "equirectangular",
-        "panorama": "/static/UF004-5.jpeg"
+        "panorama": "/static/UF004-5.jpg"
       },
       "jardin": {
         "type": "equirectangular",
